DesignProject/tests/pass/test10_if_statements.src
// Focus: If-then-else statements
// Grammar: statement -> IF LPAREN expr RPAREN THEN statBlock ELSE statBlock SEMICOLON

func test() => integer {
  local x : integer;
  if (x > 0) then { write(x); } else { write(0); };
  if (x == 0) then x := 1; else x := 2;;
  return (x);
}

